--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npm run lint && tsc --noEmit && vite build",
+    "build": "tsc --noEmit && vite build --base=./",
     "preview": "vite preview",
     "lint": "eslint . --ext .tsx",
     "prepare": "husky install",
