--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
     "baseUrl": "./src",
     "resolveJsonModule": true
   },
-  "include": ["vite.config.ts", "./src/**/*", "styled.d.ts"]
+  "include": ["./src/**/*", "styled.d.ts"]
 }
