--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jsdom": "^21.1.1",
     "lint-staged": "^13.1.2",
     "msw": "^1.2.1",
+    "node-fetch": "^3.3.1",
     "prettier": "^2.8.4",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
