--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.8",
