--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,6 @@
     "baseUrl": "./src",
     "resolveJsonModule": true
   },
-  "include": ["./src/**/*", "styled.d.ts"]
+  "include": ["./src/**/*", "styled.d.ts"],
+  "exclude": ["node_modules", "./src/**/*.test.tsx", "./src/**/test-utils.tsx"]
 }
