--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "npm run lint && tsc --noEmit && vite build --base=./",
+    "dev": "nodemon",
+    "build": "npm run lint && tsc --noEmit && npm run build:client && npm run build:server",
+    "build:client": "vite build --outDir ../dist/client",
+    "build:server": "vite build --outDir ../dist/server --ssr entry-server.ts",
+    "start": "ts-node server/server.ts",
     "preview": "vite preview",
     "lint": "eslint . --ext .tsx --ext .tsx",
     "prepare": "husky install",
@@ -15,6 +18,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.8",
@@ -25,6 +29,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/express": "^4.17.17",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
@@ -43,7 +48,9 @@
     "lint-staged": "^13.1.2",
     "msw": "^1.2.1",
     "node-fetch": "^3.3.1",
+    "nodemon": "^2.0.22",
     "prettier": "^2.8.4",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
     "vite-plugin-eslint": "^1.8.1",
