feat: add e2e tests for home page

--- a/.nycrc.json
+++ b/.nycrc.json
@@ -8,10 +8,14 @@
       "src/**/*.tsx"
     ],
     "exclude": [
+      "src/assets/**/*.*",
+      "src/store/**/*.*",
+      "src/utils/**/*.*",
       "cypress/**/*.*",
       "**/*.d.ts",
       "**/*.cy.tsx",
       "**/*.cy.ts",
-      "**/*.test.tsx"
+      "**/*.test.tsx",
+      "**/*.types.tsx"
     ]
 }
