--- a/package.json
+++ b/package.json
@@ -5,17 +5,18 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon",
-    "start": "ts-node server.tsx",
+    "start": "ts-node server.ts",
     "preview": "vite preview",
     "lint": "eslint . --ext .tsx --ext .tsx",
     "prepare": "husky install",
     "lintstaged": "lint-staged --relative",
     "coverage": "vitest run --coverage",
     "test": "vitest",
-    "cy:start-open": "start-server-and-test dev http://localhost:3000 cy:open",
-    "cy:start-run": "start-server-and-test dev http://localhost:3000 cy:run",
+    "cy:start-open": "start-server-and-test dev 3000 cy:open",
+    "cy:start-run": "start-server-and-test dev 3000 cy:run",
     "cy:open": "cypress open && nyc report --reporter=text --reporter=text-summary",
     "cy:run": "cypress run && nyc report --reporter=text --reporter=text-summary",
+    "cy:coverage": "nyc report --reporter=text --reporter=text-summary",
     "cy:clean-coverage": "npx rimraf cypress-coverage"
   },
   "dependencies": {
@@ -51,12 +52,16 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "husky": "^8.0.3",
+    "i": "^0.3.7",
     "jsdom": "^21.1.1",
     "lint-staged": "^13.1.2",
     "msw": "^1.2.1",
     "node-fetch": "^3.3.1",
     "nodemon": "^2.0.22",
+    "npm": "^9.6.5",
+    "nyc": "^15.1.0",
     "prettier": "^2.8.4",
+    "start-server-and-test": "^2.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
