--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "esnext",
     "lib": ["dom", "esnext", "dom.iterable"],
-    "jsx": "react",
+    "jsx": "react-jsx",
     "module": "esnext",
     "moduleResolution": "node",
     "noImplicitAny": true,
@@ -13,7 +13,10 @@
     "strict": true,
     "skipLibCheck": true,
     "baseUrl": "./src",
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "types": ["node", "jest", "cypress", "express"],
+    "noEmit": true,
+    "isolatedModules": true,
   },
   "ts-node": {
     "esm": true,
@@ -29,6 +32,6 @@
       "src/*"
     ]
   },
-  "include": ["./src/**/*", "styled.d.ts", "vite.config.ts", "server.tsx"],
-  "exclude": ["node_modules", "./src/**/*.test.tsx", "./src/**/test-utils.tsx"]
+  "include": ["./src/**/*", "styled.d.ts", "server.ts"],
+  "exclude": ["node_modules", "cypress", "./cypress.config.ts", "**/*.cy.ts"]
 }
