--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "test": "vitest",
     "cy:start-open": "start-server-and-test dev 3000 cy:open",
     "cy:start-run": "start-server-and-test dev 3000 cy:run",
-    "cy:open": "cypress open && nyc report --reporter=text --reporter=text-summary",
-    "cy:run": "cypress run && nyc report --reporter=text --reporter=text-summary",
+    "cy:open": "cypress open --browser chrome && nyc report --reporter=text --reporter=text-summary",
+    "cy:run": "cypress run --browser chrome && nyc report --reporter=text --reporter=text-summary",
     "cy:coverage": "nyc report --reporter=text --reporter=text-summary",
     "cy:clean-coverage": "npx rimraf cypress-coverage"
   },
